Skipper Lib JS usage

--- a/services/mobilenetservice/package.json
+++ b/services/mobilenetservice/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobilenetservice",
   "version": "1.0.0",
-  "description": "Katana ML",
+  "description": "Katana ML, MobileNet service",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.8.0",
-    "http": "^0.0.1-security"
+    "@katanaml/skipper-lib-js": "^1.4.0"
   }
 }
