--- a/skipper-lib-js/package.json
+++ b/skipper-lib-js/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@katanaml/skipper-lib-js",
-    "version": "1.3.0",
+    "version": "1.4.0",
     "description": "Helper library for Katana ML Skipper workflow product",
     "license": "Apache-2.0",
     "repository": "katanaml/katana-skipper",
@@ -12,5 +12,10 @@
         "kubernetes",
         "tensorflow",
         "rabbitmq"
-    ]
+    ],
+    "dependencies": {
+        "add-dependencies": "^1.1.0",
+        "amqplib": "^0.8.0",
+        "http": "^0.0.1-security"
+    }
 }
