--- a/services/mobilenetservice/package.json
+++ b/services/mobilenetservice/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@katanaml/skipper-lib-js": "^1.4.0"
+    "@katanaml/skipper-lib-js": "^1.4.0",
+    "@tensorflow/tfjs-node": "^3.11.0"
   }
 }
