--- a/services/mobilenetservice/package.json
+++ b/services/mobilenetservice/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@katanaml/skipper-lib-js": "^1.4.0",
     "@tensorflow-models/mobilenet": "^2.1.0",
-    "@tensorflow/tfjs-node": "^3.11.0",
-    "canvas": "^2.8.0"
+    "@tensorflow/tfjs-node": "^3.11.0"
   }
 }
